--- a/jenkins/example3_sonarqube/docker-compose.yml
+++ b/jenkins/example3_sonarqube/docker-compose.yml
@@ -28,7 +28,7 @@ services:
   mysonarqube:
     container_name: my_custom_sonarqube
     # build: ./sonarqube_home
-    image: sonarqube:7.9.5-community
+    image: sonarqube:lts-community
     environment:
       SONAR_ES_BOOTSTRAP_CHECKS_DISABLE: "true"
     ports:
@@ -41,11 +41,6 @@ services:
       - ./sonarqube_home/logs/:/opt/sonarqube/logs
       - ./sonarqube_home/extensions/:/opt/sonarqube/extensions
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          cpus: "2"
-          memory: 3G
 
 # To use docker-volume (custom_jenkins_home) instead of a directory path-file
 volumes:
